fix: views for api

--- a/src/app/features/rentals/components/detail/detail.component.html
+++ b/src/app/features/rentals/components/detail/detail.component.html
@@ -15,7 +15,7 @@
         </mat-card-title>
         <mat-card-content>
             <div fxLayout="column" fxLayoutAlign="start center">
-                <img class="fit" [src]="rental.picture" alt="house picture">
+                <img class="fit" [src]="getPictureUrl(rental.picture)" alt="house picture">
             </div>
             <div class="my2" fxLayout="row" fxLayoutAlign="space-between center">
                 <div fxLayout="center">
@@ -36,8 +36,8 @@
                 {{ rental.description }}
             </div>
             <div class="date" class="my2" fxLayout="row" fxLayoutAlign="space-between center">
-                <div class="created"><i>Create at: </i> {{ rental.created_at| date: 'longDate'}}</div>
-                <div class="updated"><i>Last update: </i> {{ rental.updated_at| date: 'longDate'}}</div>
+                <div class="created"><i>Create at: </i> {{ rental.createdAt| date: 'longDate'}}</div>
+                <div class="updated"><i>Last update: </i> {{ rental.updatedAt| date: 'longDate'}}</div>
             </div>
         </mat-card-content>
     </mat-card>
